<resources>
    <string name="app_name">DiveTheSite</string>
    <string name="action_settings">Settings</string>
    <string name="save">Download</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select">Select</string>
    <string name="refresh">Refresh</string>
    <string name="publish">Publish</string>
    <string name="log">Log</string>
    <string name="saved">Downloaded</string>
    <string name="local">Local</string>
    <string name="online">Online</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
	<string name="loading">Loading...</string>
    <string name="nav">&lt;</string>
    <string name="welcomeMessage">Welcome %1$s!</string>
    <string name="new_entry">New Entry</string>
    <string name="notAvailable">Not Available</string>
    <string name="nothingFound">Nothing Found...</string>
    <string name="comma_space_separator">,</string>
    <string name="diveSiteListTitle">Dive Sites</string>
    <string name="diveLogListTitle">Dive Logs</string>
    <string name="diverListTitle">Divers</string>
    <string name="scheduledDiveListTitle">Scheduled Dives</string>
    <string name="mapTitle">Map</string>
    <string name="active_filter">Active Filters:</string>
    <string name="filter_list_title">Filter</string>
	<string name="filter_country">Country:</string>
	<string name="filter_state">State:</string>
	<string name="filter_city">City:</string>
	<string name="filter_title">Title:</string>
	<string name="filter_daysPrevious">Previous Days:</string>
	<string name="filter_daysNext">Next Days:</string>
	<string name="filter_hiding">Hiding</string>
	<string name="filter_published">Published</string>
	<string name="filter_unpublished">Unpublished</string>
	<string name="filter_list_all">All</string>
	<string name="filter_list_clear_filter">Clear</string>
	<string name="filter_list_close">Close</string>
	<string name="filter_name">Name:</string>
	<string name="dive_sites_saved_message">Selected dive sites downloaded!</string>
	<string name="dive_sites_published_message">Selected dive sites published!</string>
    <string name="dive_site_city_hint">City</string>
    <string name="dive_site_province_hint">State</string>
    <string name="dive_site_country_hint">Country</string>
    <string name="dive_site_latitude_hint">Latitude</string>
    <string name="dive_site_longitude_hint">Longitude</string>
    <string name="dive_site_get_longitude_latitude_button">Set to current location</string>
    <string name="divesite_edit_mode">Edit Dive Site</string>
    <string name="divesite_view_mode">Finish Editing</string>
    <string name="divesite_copy">Copy Dive Site</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="dive_site_title_hint">Dive Site Name</string>
    <string name="new_dive_site_name">New Dive Site</string>
	<string name="selected_image">Selected Image</string>
	<string name="online_communication_error">Unable to refresh</string>
	<string name="dive_site_add_picture_gallery">Choose Picture</string>
	<string name="dive_site_add_picture_camera">Take Picture</string>
	<string name="divesite_location_title">Location</string>
	<string name="divesite_difficulty_title">Difficulty</string>
	<string name="divesite_description_title">Description</string>
	<string name="divesite_directions_title">Directions</string>
	<string name="divesite_coordinates_title">Coordinates</string>
	<string name="divesite_history_title">History</string>
	<string name="divesite_notes_title">Notes</string>
	<string name="divesite_source_title">Source</string>
	<string name="divesite_submitter_title">Submitter</string>
	<string name="divesite_details_title">Details</string>
	<string name="divesite_pictures_title">Pictures</string>
	<string name="divesite_logs_title">Dive Logs</string>
	<string name="divesite_add_divesite">Add Dive Site</string>
	<string name="divesite_latitude_regex">^([-+]?\\d{1,2}([.]\\d+)?)</string>
	<string name="divesite_longitude_regex">([-+]?\\d{1,3}([.]\\d+)?)$</string>
	<string name="divesite_empty_latitude">0.0</string>
	<string name="divesite_empty_longitude">0.0</string>
	<string name="divesite_details">Dive Site Details</string>
	<string name="divesite_isSalt">Salt</string>
	<string name="divesite_isFresh">Fresh</string>
	<string name="divesite_isShore">Shore</string>
	<string name="divesite_isBoat">Boat</string>
	<string name="divesite_isWreck">Wreck</string>
	<string name="divesite_isPublished">Published</string>
	<string name="divesite_isUnpublished">Unpublished</string>
	<string name="divesite_isSaved">Downloaded</string>
	<string name="divesite_requiresRefresh">Dive Site Update</string>
	<string name="divesite_requiresRefresh_message">Update downloaded dive site?</string>
	<string name="divesite_requiresRefresh_overwrite">\n\nUnpublished changes will be lost.</string>
	<string name="divesite_updated">Updated</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_confirm_password">Confirm Password</string>
	<string name="login_login">Log In</string>
	<string name="skip_login_login">Guest Log In</string>
	<string name="login_register">Register</string>
	<string name="login_google">Login with Google account</string>
	<string name="login_invalid">Invalid username or password</string>
	<string name="login_progress">Logging in...</string>
	<string name="logout">Log out</string>
	<string name="logout_confirm">Do you really want to log out?</string>
	<string name="register_username">Username:*</string>
	<string name="register_password">Password:*</string>
	<string name="register_confirmpassword">Confirm Password:*</string>
	<string name="register_firstname">First Name:</string>
	<string name="register_lastname">Last Name:</string>
	<string name="register_city">City:</string>
	<string name="register_province">Province/State:</string>
	<string name="register_country">Country:</string>
	<string name="register_email">Email:*</string>
	<string name="register_blank_username">Please enter a username</string>
	<string name="register_blank_email">Please enter an email</string>
	<string name="register_blank_password">Please enter a password</string>
	<string name="register_password_mismatch">Passwords do not match</string>
	<string name="register_progress">Registering...</string>
	<string name="register_invalid_email">Invalid email format</string>
	<string name="login_create_account">Create an account:</string>
	<string name="register_check_email">Check your email for a link to confirm your registration!</string>
	<string name="archive_divesites">Archive</string>
	<string name="unarchive_divesites">Un-archive</string>
	<string name="delete_divesites_message">Are you sure you wish to delete the selected dive sites?</string>
	<string name="publish_divesites_message">Are you sure you wish to publish the selected dive sites?</string>
	<string name="publish_divesite_message">Are you sure you wish to publish this dive site?</string>
	<string name="publish_divesite_error">Unable to publish dive site</string>
	<string name="publish_divesite_progress">Publishing dive sites...</string>
	<string name="save_divesite_progress">Downloading dive sites...</string>
	<string name="divesite_show_visible">Dive Sites</string>
	<string name="divesite_show_archived">Archives</string>
	<string name="divesite_search_divesite_list">Search</string>
	<string name="divesite_add_divesite_here">Click to add a Dive Site here</string>
	<string name="divesite_search_no_results">No places found</string>
	<string name="divesite_publish_sites">Publish Dive Sites</string>
	<string name="diver_user_info_title">User Info</string>
	<string name="diver_page2_title">%1$s\'s Dive Sites</string>
	<string name="diver_submitted_sites_title">SUBMITTED SITES</string>
	<string name="diver_log_title">LOG</string>
	<string name="ProfileImage">Profile Image</string>
	<string name="ProfileImageChange">Change Picture</string>
	<string name="CertificationTitle">Title</string>
	<string name="CertificationDate">Date</string>
	<string name="CertificationNo">Number</string>
	<string name="CertificationLocation">Location</string>
	<string name="divesite_show_NDBCBuoys">Show NDBC Buoys</string>
	<string name="divesite_hide_NDBCBuoys">Hide NDBC Buoys</string>
	<string name="divesite_show_online">Show Online Sites</string>
	<string name="divesite_hide_online">Hide Online Sites</string>
	<string name="divesite_show_saved">Show Downloaded Sites</string>
	<string name="divesite_hide_saved">Hide Downloaded Sites</string>
	<string name="na_string">NA</string>
	<string name="updated">Updated</string>
	<string name="stationTitle">Station %1$s</string>
	<string name="meteorologicalDataTitle">Meteorological Data</string>
	<string name="waveDataTitle">Wave Data</string>
	<string name="daysSince">%1$d days ago</string>
	<string name="hoursSince">%1$d hours ago</string>
	<string name="minutesSince">%1$d minutes ago</string>
	<string name="secondsSince">%1$d seconds ago</string>
	<string name="ago">ago</string>
	<string name="temperatureDegCValue">%1$.1f °C</string>
	<string name="speedMSValue">%1$.1f m/s</string>
	<string name="distanceMValue">%1$.1f m</string>
	<string name="distanceFTValue">%1$.1f ft</string>
	<string name="pressureHPaValue">%1$.1f hPa</string>
	<string name="visibilityNMIValue">%1$.1f nmi</string>
	<string name="directionDegTValue">%1$.1f degT</string>
	<string name="timeSValue">%1$.1f s</string>
	<string name="ndbc_station_data_air_temp">Air:</string>
	<string name="ndbc_station_data_water_temp">Water:</string>
	<string name="ndbc_station_data_wind_direction">Wind Dir.:</string>
	<string name="ndbc_station_data_wind_speed">Wind Speed:</string>
	<string name="ndbc_station_data_wind_gust">Wind Gust:</string>
	<string name="ndbc_station_data_tide">Tide:</string>
	<string name="ndbc_station_data_significant_wave_height">Sig. Wave Height:</string>
	<string name="ndbc_station_data_dominant_wave_direction">Dom. Wave Dir.:</string>
	<string name="ndbc_station_data_average_wave_period">Wave Period:</string>
	<string name="ndbc_station_data_dominant_wave_period">Dom. Wave Period:</string>
	<string name="ndbc_station_data_sea_level_pressure">Sea Level Pressure:</string>
	<string name="ndbc_station_data_dew_point_temperature">Dew Point:</string>
	<string name="diver_profile_cert_title_hint">Certification Title</string>
	<string name="diver_profile_cert_date_hint">Date</string>
	<string name="diver_profile_cert_location_hint">Location</string>
	<string name="diver_profile_cert_number_hint">Number</string>
	<string name="diver_profile_cert_title">TITLE:</string>
	<string name="diver_profile_cert_date">DATE:</string>
	<string name="diver_profile_cert_location">LOCATION:</string>
	<string name="diver_profile_cert_number">NUMBER:</string>
	<string name="diver_profile_cert_primary">PRIMARY:</string>
	<string name="divelog_stop_time_hint">Time</string>
	<string name="divelog_stop_depth_hint">Depth</string>
	<string name="scheduleddive_label_timestamp">Date and Time:</string>
	<string name="scheduleddive_label_comments">Comments:</string>
	<string name="scheduleddive_label_divesites">Sites:</string>
	<string name="scheduleddive_timestamp_hint">Date and Time</string>
	<string name="scheduleddive_comments_hint">Comments</string>
	<string name="scheduleddive_sites_hint">Enter Dive Site Name</string>
	<string name="scheduleddive_title_hint">Title</string>
    <string name="pref_header_general">General Settings</string>
    <string name="pref_header_divesites">Dive Sites</string>
    <string name="pref_header_divelogs">Dive Logs</string>
    <string name="pref_header_scheduleddives">Scheduled Dives</string>
	<string name="unit_minutes">min.</string>
</resources>