<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:DiveTheSite="http://schemas.android.com/apk/res-auto"

    android:id="@+id/dive_action_menu" >

    <item android:id="@+id/menu_item_publish_divesite"
        DiveTheSite:showAsAction="always"
        android:icon="@drawable/ic_menu_upload"
        android:title="@string/publish" />
    
    <item android:id="@+id/menu_item_edit_mode"
        DiveTheSite:showAsAction="always"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/divesite_edit_mode"
        android:visible="false" />
    
    <item android:id="@+id/menu_item_divesite_save"
        DiveTheSite:showAsAction="always"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/save"
        android:visible="false" />

    <item android:id="@+id/menu_item_divesite_archive"
        DiveTheSite:showAsAction="never"
        android:title="@string/archive_divesites"
        android:visible="false" />
    
    <item android:id="@+id/menu_item_divesite_unarchive"
        DiveTheSite:showAsAction="never"
        android:title="@string/unarchive_divesites"
        android:visible="false" />

</menu>
