<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:DiveTheSite="http://schemas.android.com/apk/res-auto"

    android:id="@+id/dive_action_menu" >

    <item android:id="@+id/menu_item_edit_scheduleddive"
        DiveTheSite:showAsAction="always"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/edit" />
    
    <item android:id="@+id/menu_item_publish_scheduleddive"
        DiveTheSite:showAsAction="always"
        android:icon="@drawable/ic_menu_upload"
        android:title="@string/publish" />
    
    <item android:id="@+id/menu_item_share_scheduleddive"
        DiveTheSite:showAsAction="always"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share" />
         
    <item android:id="@+id/menu_item_delete_local_scheduleddive"
        DiveTheSite:showAsAction="never"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete" />    
</menu>
