<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/loginBackground" >
   
    <ImageView
    	android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
    	android:layout_marginTop="10dp"
    	android:contentDescription="@string/app_name"
    	android:layout_gravity="center" 
    	android:src="@drawable/logo_horiz_1000x381" >
	</ImageView>    
	
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
    	android:orientation="vertical" >
    	
        <EditText
        	android:id="@+id/login_username_edit" 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:fontFamily="Calibri"
        	android:hint="@string/login_username" />
        
        <EditText
            android:id="@+id/login_password_edit" 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:inputType="textPassword"
        	android:hint="@string/login_password" />
        
        <LinearLayout style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:orientation="horizontal" >    
		        <Button style="?android:attr/buttonBarButtonStyle"
		        	android:id="@+id/login_button"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_weight="1"
		        	android:text="@string/login_login" />
		        <Button style="?android:attr/buttonBarButtonStyle"
		        	android:id="@+id/register_button"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_weight="1"
		        	android:text="@string/login_register" />
        </LinearLayout>
        
        <Button style="?android:attr/buttonBarButtonStyle"
        	android:id="@+id/skip_login_button"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/skip_login_login" />
        
    </LinearLayout>

    <ImageButton
        android:id="@+id/login_google_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login_google"
        android:background="@android:color/transparent"
        android:src="@drawable/login_google_button"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"  />
	
</LinearLayout>
 