<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:orientation="vertical" >
   
    <EditText
    	android:id="@+id/usernameEntered"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
    	android:layout_marginBottom="10dp"
    	android:inputType="text"
    	android:hint="@string/login_username" >"
    </EditText>
    
    <EditText
    	android:id="@+id/passwordEntered"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"
    	android:hint="@string/login_password" >"
    </EditText>
    
    <EditText
    	android:id="@+id/confirmPasswordEntered"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"
    	android:hint="@string/login_confirm_password" >
    </EditText>

</LinearLayout>
